--- a/views/users.html
+++ b/views/users.html
@@ -4,17 +4,12 @@
     </header>
 
     <div class="btn-group">
-        <button 
-            type="button" 
-            class="add btn btn-primary btn-lg"
-            data-toggle="tooltip" 
-            data-placement="bottom" 
-            title="Create new user">
+        <button type="button" class="add btn btn-primary btn-lg" data-toggle="tooltip" data-placement="bottom" title="Create new user">
 
             <i class="fa fa-plus-circle"></i>
         </button>
 
-        
+
         <button type="button" class="btn btn-lg btn-default">Right</button>
     </div>
 
@@ -40,6 +35,11 @@
 
                         <i class="fa fa-remove"></i>
                     </button>
+
+                    <button type="button" class="btn btn-success edit" data-id="{{name}}" data-toggle="tooltip" data-placement="bottom" title="Edit user {{name}}">
+
+                        <i class="fa fa-edit"></i>
+                    </button>
                 </td>
             </tr>
             {{/users}}
@@ -49,6 +49,48 @@
 
 
 </section>
+
+<!-- Modal -->
+<div class="modal fade" id="edit-user" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">File input</label>
+                        <input type="file" id="exampleInputFile">
+                        <p class="help-block">Example block-level help text here.</p>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Check me out
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="/admin.js">
 </script>
