--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,13 +1,15 @@
-@import"font-awesome";
-@import"colors";
-@import"bourbon"; // or "bourbon" when in Rails
-@import"_base";
-//@import "_buttons";
-@import"grid-settings";
-@import"neat";
-@import"_tables";
-@import"admins";
-@import"header";
+@import "font-awesome";
+@import "colors";
+@import "bourbon"; // or "bourbon" when in Rails
+@import "_base";
+//@import  "_buttons";
+@import "grid-settings";
+@import "neat";
+@import "_tables";
+@import "admins";
+@import "header";
+@import "inputs";
+
 a {
     cursor: pointer !important;
 }
